<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292929"
    tools:context=".TimerFragment">

    <TextView
        android:id="@+id/timerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/timer"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/secondsLetter"
        android:layout_width="13dp"
        android:layout_height="17dp"
        android:layout_marginBottom="8dp"
        android:text="@string/seconds_letter"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/secondsTextView"
        app:layout_constraintStart_toEndOf="@+id/secondsTextView" />

    <TextView
        android:id="@+id/minutesLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/minutes_letter"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/minutesTextView"
        app:layout_constraintStart_toEndOf="@+id/minutesTextView" />

    <TextView
        android:id="@+id/hoursLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/hours_letter"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/hoursTextView"
        app:layout_constraintStart_toEndOf="@+id/hoursTextView" />

    <TextView
        android:id="@+id/minutesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/numericKeyboardGridLayout"
        app:layout_constraintEnd_toStartOf="@+id/secondsTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hoursTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hoursTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/numericKeyboardGridLayout"
        app:layout_constraintEnd_toStartOf="@+id/minutesTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/secondsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/numericKeyboardGridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minutesTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <GridLayout
        android:id="@+id/numericKeyboardGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Number Buttons (0-9) -->
        <Button
            android:id="@+id/button1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:text="1"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="6" />

        <Button
            android:id="@+id/button7"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="9" />

        <!-- Empty Button for layout alignment -->
        <Button
            android:id="@+id/btnEmpty"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:visibility="invisible"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="" />

        <Button
            android:id="@+id/button0"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:text="0" />

        <!-- Backspace Button -->
        <ImageButton
            android:id="@+id/backspaceButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_button_background"
            android:textSize="30dp"
            android:src="@drawable/baseline_backspace_24"
             />
    </GridLayout>

    <ImageButton
        android:id="@+id/stopWatchPlayButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_play_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numericKeyboardGridLayout" />

    <ImageButton
        android:id="@+id/resetStopwatchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:src="@drawable/baseline_restart_alt_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/stopWatchPlayButton"
        app:layout_constraintTop_toBottomOf="@+id/numericKeyboardGridLayout"
        app:layout_constraintVertical_bias="0.501" />



</androidx.constraintlayout.widget.ConstraintLayout>
